[gd_scene load_steps=12 format=3 uid="uid://d0uw1sb6c1v64"]

[ext_resource type="Script" uid="uid://dnp4lmqy3urp1" path="res://scripts/main.gd" id="1_tefeu"]
[ext_resource type="PackedScene" uid="uid://3e1x3vxmnc8h" path="res://scenes/background.tscn" id="2_o6xl0"]
[ext_resource type="PackedScene" uid="uid://sk8717hno8rx" path="res://scenes/player.tscn" id="3_tipki"]
[ext_resource type="PackedScene" uid="uid://c0l13mcrbqiam" path="res://scenes/platform.tscn" id="4_85g3d"]
[ext_resource type="PackedScene" uid="uid://dssyfb3gecehd" path="res://scenes/pause_menu.tscn" id="5_choun"]
[ext_resource type="PackedScene" uid="uid://d034hcijkwa8y" path="res://scenes/danger_zone.tscn" id="5_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ds31qgkich110" path="res://scenes/main_menu.tscn" id="6_ya4ey"]
[ext_resource type="PackedScene" uid="uid://bkoadxayaeo0x" path="res://scenes/game_over_menu.tscn" id="8_tipki"]
[ext_resource type="FontFile" uid="uid://8rcdjwvbjj5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="9_85g3d"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1bvp3"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lquwl"]
normal = Vector2(-1, 0)

[node name="Main" type="Node"]
script = ExtResource("1_tefeu")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -100)

[node name="ScoreLabel" type="Label" parent="Camera2D"]
z_index = 10
offset_left = -289.0
offset_top = -256.0
offset_right = -260.0
offset_bottom = -226.0
theme_override_fonts/font = ExtResource("9_85g3d")
theme_override_font_sizes/font_size = 29
text = "0"

[node name="Background" parent="." instance=ExtResource("2_o6xl0")]
position = Vector2(0, -100)

[node name="Player" parent="." instance=ExtResource("3_tipki")]
z_index = 5

[node name="Platforms" type="Node" parent="."]

[node name="Floor" parent="Platforms" instance=ExtResource("4_85g3d")]
position = Vector2(1, 8)
scale = Vector2(2.84, 1)

[node name="Walls" type="Node" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-180, 0)
collision_layer = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("WorldBoundaryShape2D_1bvp3")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(180, 0)
collision_layer = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("WorldBoundaryShape2D_lquwl")

[node name="DangerZone" parent="." instance=ExtResource("5_o6xl0")]
position = Vector2(0, 109)

[node name="PauseMenu" parent="." instance=ExtResource("5_choun")]
visible = false

[node name="MainMenu" parent="." instance=ExtResource("6_ya4ey")]
visible = false

[node name="GameOverMenu" parent="." instance=ExtResource("8_tipki")]
visible = false

[connection signal="player_caught" from="DangerZone" to="." method="game_over"]
[connection signal="exited_to_game" from="PauseMenu" to="." method="_on_pause_menu_exited_to_game"]
[connection signal="exited_to_game" from="MainMenu" to="." method="_on_main_menu_exited_to_game"]
